# cuta-docker

./: README.md  pyproject.toml
aws/python/2.7/: Dockerfile
aws/python/3.6/: Dockerfile
aws/python/3.7/: Dockerfile
aws/python/3.8/: Dockerfile
aws/python/base/: Dockerfile  packages.txt
manage/cuta_docker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manage/cutadocker/: __init__.py  api.py  cli.py
