[tool.poetry]
name = "cuta-docker"
version = "0.1.0"
description = ""
authors = ["Yani Lathouris <ylathouris@gmail.com>"]
packages [
    { include="cutadocker", from="manage" }
]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.2.0"
structlog = "^20.1.0"
colorama = "^0.4.3"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
cuta-docker = "cutadocker.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
